# embassy-crawler

./: .gitignore  README.md  main.py  pyproject.toml  run.sh
env/: pyvenv.cfg
