[tool.poetry]
name = "embassy-crawler"
version = "0.1.0"
description = ""
authors = ["Dimis Tsaousis <dimis.tsaousis@oaknorth.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.17.0"
six = "^1.15.0"
pandas = "^1.1.1"
lxml = "^4.5.2"
PyOpenAL = "^0.7.11-alpha.1"
wheel = "^0.35.1"
PyOgg = "^0.6.14-alpha.1"
opuslib = "^3.0.1"
playsound = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
